--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
       </section>
     </main>
 
+  <div id="preloader">
+    <div class="loader"></div>
+  </div>
+
+      <div class="balance-card neumorphic">
+        <h2>Remaining Time Balance Today</h2>
+        <div class="balance">
+          <div class="balance-values">
+            <span id="balance-seconds">0</span>s /
+            <span id="balance-minutes">0</span>min /
+            <span id="balance-hours">0</span>hour(s)
+          </div>
+        </div>
+        <div class="progress-bar neumorphic">
+          <div class="progress" id="progress"></div>
+        </div>
+      </div>
+
+
+
     <footer>
       <p>© 2024 Ultimate Time Balance. All rights reserved.</p>
     </footer>
