--- a/index.html
+++ b/index.html
@@ -17,72 +17,12 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Calendar</a></li>
+        <li><a href="#">Contact</a></li>
         <li><a href="#" id="theme-toggle" title="Toggle Dark Mode">🌙</a></li>
       </ul>
     </nav>
 
     <main>
-      <section class="balance-card neumorphic">
-        <h2>Remaining Time Balance Today</h2>
-        <div class="balance">
-          <div class="balance-values">
-            <span id="balance-seconds">0</span>s /
-            <span id="balance-minutes">0</span>min /
-            <span id="balance-hours">0</span>hour(s)
-          </div>
-        </div>
-        <div class="progress-bar neumorphic">
-          <div class="progress" id="progress"></div>
-        </div>
-      </section>
-
-      <section class="custom-timer neumorphic">
-        <h3>Set Custom Timer</h3>
-        <label for="hours">Hours:</label>
-        <input type="number" id="custom-hours" min="0" max="23" value="0">
-        <label for="minutes">Minutes:</label>
-        <input type="number" id="custom-minutes" min="0" max="59" value="0">
-        <label for="seconds">Seconds:</label>
-        <input type="number" id="custom-seconds" min="0" max="59" value="0">
-        <button id="start-custom-timer" class="btn neumorphic">Start Timer</button>
-        <button id="reset-custom-timer" class="btn neumorphic">Reset Timer</button>
-      </section>
-
-      <section class="quote neumorphic">
-        <p id="quote-text"></p>
-      </section>
-
-      <section class="pomodoro neumorphic">
-        <h3>Pomodoro Timer</h3>
-        <div class="timer">
-          <span id="pomodoro-minutes">25</span>:<span id="pomodoro-seconds">00</span>
-        </div>
-        <button id="start-pomodoro" class="btn neumorphic">Start</button>
-        <button id="reset-pomodoro" class="btn neumorphic">Reset</button>
-      </section>
-
-      <section class="interval-timer neumorphic">
-        <h3>Interval Timer</h3>
-        <label for="work">Work Duration:</label>
-        <input type="number" id="work-duration" min="0" max="60" value="25">
-        <label for="rest">Rest Duration:</label>
-        <input type="number" id="rest-duration" min="0" max="30" value="5">
-        <button id="start-interval-timer" class="btn neumorphic">Start Interval Timer</button>
-      </section>
-
-      <section class="task-tracker neumorphic">
-        <h3>Task Tracker</h3>
-        <ul id="task-list"></ul>
-        <input type="text" id="new-task" placeholder="New Task">
-        <button id="add-task" class="btn neumorphic">Add Task</button>
-      </section>
-    </main>
-
-  <div id="preloader">
-    <div class="loader"></div>
-  </div>
-
       <div class="balance-card neumorphic">
         <h2>Remaining Time Balance Today</h2>
         <div class="balance">
@@ -97,7 +37,31 @@
         </div>
       </div>
 
+      <div class="custom-timer neumorphic">
+        <h3>Set Custom Timer</h3>
+        <label for="hours">Hours:</label>
+        <input type="number" id="custom-hours" min="0" max="23" value="0">
+        <label for="minutes">Minutes:</label>
+        <input type="number" id="custom-minutes" min="0" max="59" value="0">
+        <label for="seconds">Seconds:</label>
+        <input type="number" id="custom-seconds" min="0" max="59" value="0">
+        <button id="start-custom-timer" class="btn neumorphic">Start Timer</button>
+        <button id="reset-custom-timer" class="btn neumorphic">Reset Timer</button>
+      </div>
 
+      <div class="quote neumorphic">
+        <p id="quote-text"></p>
+      </div>
+
+      <div class="pomodoro neumorphic">
+        <h3>Pomodoro Timer</h3>
+        <div class="timer">
+          <span id="pomodoro-minutes">25</span>:<span id="pomodoro-seconds">00</span>
+        </div>
+        <button id="start-pomodoro" class="btn neumorphic">Start</button>
+        <button id="reset-pomodoro" class="btn neumorphic">Reset</button>
+      </div>
+    </main>
 
     <footer>
       <p>© 2024 Ultimate Time Balance. All rights reserved.</p>
